--- a/package.json
+++ b/package.json
@@ -1,18 +1,37 @@
 {
   "name": "my-app",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "expo-router/entry",
   "scripts": {
     "start": "expo start",
     "android": "expo start --android",
     "ios": "expo start --ios",
-    "web": "expo start --web"
+    "web": "expo start --web",
+    "format": "prettier --write \"**/*.{js,json,md,ts,jsx,tsx}\""
   },
   "dependencies": {
+    "@expo/vector-icons": "^15.0.3",
+    "@react-native-async-storage/async-storage": "^2.2.0",
+    "babel-preset-expo": "~54.0.0",
     "expo": "~54.0.22",
+    "expo-constants": "~18.0.10",
+    "expo-font": "~14.0.9",
+    "expo-linking": "~8.0.8",
+    "expo-location": "~19.0.7",
+    "expo-maps": "~0.12.8",
+    "expo-router": "~6.0.14",
     "expo-status-bar": "~3.0.8",
+    "prop-types": "^15.8.1",
     "react": "19.1.0",
-    "react-native": "0.81.5"
+    "react-dom": "19.1.0",
+    "react-native": "0.81.5",
+    "react-native-maps": "1.20.1",
+    "react-native-safe-area-context": "~5.6.0",
+    "react-native-screens": "~4.16.0"
   },
-  "private": true
+  "private": true,
+  "devDependencies": {
+    "babel-plugin-module-resolver": "^5.0.2",
+    "prettier": "^3.6.2"
+  }
 }
